[tool.poetry]
name = "api-try"
version = "0.1.0"
description = ""
authors = ["EclairK <lightning0404@gmail.com>"]
readme = "README.md"
packages = [{include = "api_try"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
